added entity Product

--- a/SprawlingLearningApplication/src/main/resources/static/index.html
+++ b/SprawlingLearningApplication/src/main/resources/static/index.html
@@ -7,5 +7,6 @@
 <body>
 <p>Get your greeting <a href="/greeting">here</a></p>
 <p><a href="showCustomers">Look at customers</a></p>
+<p><a href="showProducts">Look at products</a></p>
 </body>
 </html>
